Updated jumbotron content for Banner slider

--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!--A Design by W3layouts
-Author: W3layout
-Author URL: http://w3layouts.com
--->
 <!DOCTYPE HTML>
 <html>
 
@@ -31,7 +27,11 @@ Author URL: http://w3layouts.com
         <div class="banner-info">
             <div class="container">
                 <div class="logo">
-                    <h1><a href="index.html">BIVR-&alpha;</a></h1>
+
+                    <h1>
+                        <img src="images/logo.jpeg" alt="bivr-alpah-logo" height="45px">
+                        <a href="index.html">BIVR-&alpha;</a>
+                    </h1>
                 </div>
                 <div class="top-menu">
                     <span class="menu"></span>
@@ -79,27 +79,51 @@ Author URL: http://w3layouts.com
 
                 <div class="slid banner1">
                     <div class="caption">
-                        <h3>Adventure Game - 343 industries - master chief</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec pellentesque ex. Morbi
-                            iaculis mi in varius auctor. Nullam feugiat erat ex, eu vehicula velit efficitur non.</p>
+                        <h3>A Multiplayer - Meta-Verse - Social Community</h3>
+                        <p>Explore the boat island from a boat house. Get an access and interact with highlanders on this
+                            virtual island from different boats around the world.</p>
+                        <a class="btn btn-info btn-lg" href="#explore">TAKE A RIDE</a>
                     </div>
                 </div>
 
 
                 <div class="slid banner2">
                     <div class="caption">
-                        <h3>God of war - kratos - sony santa monica</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec pellentesque ex. Morbi
-                            iaculis mi in varius auctor. Nullam feugiat erat ex, eu vehicula velit efficitur non.</p>
+                        <h3>An island - Exists inside - Your home </h3>
+                        <p> Harness the play room and other mini games across the Island. YOu shall be amazed 
+                            with the experience. You can meet with others
+                            privately or publicly on the island. </p>
+                        <a class="btn btn-info btn-lg" href="#explore">TAKE A RIDE</a>
                     </div>
                 </div>
 
 
                 <div class="slid banner3">
                     <div class="caption">
-                        <h3>Battlefield 4 - game - explosion - digital illusions</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec pellentesque ex. Morbi
-                            iaculis mi in varius auctor. Nullam feugiat erat ex, eu vehicula velit efficitur non.</p>
+                        <h3>FREE Boat Ride - For highlanders</h3>
+                        <p>To become an highlander, simply register on our <a href="https://theboatisland.com">Boat Island Platform</a>. Our platform will be free for our highlanders, you can also connect by purchasing a token to gain access.
+
+                        </p>
+                        <a class="btn btn-info btn-lg" href="#explore">TAKE A RIDE</a>
+                    </div>
+                </div>
+
+                <div class="slid banner3">
+                    <div class="caption">
+                        <h3><a href="https://bivr.io">BIVR-&alpha;</a>Virtual Community - For Islanders</h3>
+                        <p>We are building a META and Virtual space islanders can visit, connect 
+                            and enjoy exclusive entertainment from different boats around the world.
+                        </p>
+                        <a class="btn btn-info btn-lg" href="#explore">TAKE A RIDE</a>
+                    </div>
+                </div>
+
+                <div class="slid banner3">
+                    <div class="caption">
+                        <h3>GET ACCESS <br>Purchase &alpha;-shell Token</h3>
+                        <p>A token gives you complete access to this new world of virtual reality.
+                        </p>
+                        <a class="btn btn-info btn-lg" href="#explore">TAKE A RIDE</a>
                     </div>
                 </div>
 
@@ -177,16 +201,15 @@ Author URL: http://w3layouts.com
         </div>
     </div>
     <!-- latest -->
-    <div class="latest">
+    <div class="latest" id="explore">
         <div class="container">
             <div class="latest-games">
-                <h3>Latest Games</h3>
+                <h3>Explore The Island</h3>
                 <span></span>
             </div>
             <div class="latest-top">
                 <div class="col-md-12 trailer">
-                    <iframe src=""
-                        frameborder="0" allowfullscreen></iframe>
+                    <iframe src="https://youtu.be/yRh7N-CluiM" frameborder="0" allowfullscreen></iframe>
                 </div>
                 <div class="clearfix"> </div>
             </div>
@@ -270,7 +293,7 @@ Author URL: http://w3layouts.com
     <!---->
     <div class="copywrite">
         <div class="container">
-            <p> © 2020 Adventure Gaming. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a>
+            <p> &copy; <span id="year"></span> BIVR-&alpha;. All rights reserved | Design by <span id="devloper"></span>
             </p>
         </div>
     </div>
