Updated content for all pages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Boat Island Virtual Reality | BIVR-&alpha;</title>
+    <title>BIVR-&alpha; | Home</title>
     <link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
     <!-- jQuery (necessary JavaScript plugins) -->
     <script src="js/bootstrap.js"></script>
@@ -101,21 +101,21 @@
     <div class="content">
         <div class="container">
             <div class="top-games">
-                <h3>Top Games</h3>
+                <h3>Virtual Scenes</h3>
                 <span></span>
             </div>
             <div class="top-game-grids">
                 <ul id="flexiselDemo1">
                     <li>
                         <div class="game-grid">
-                            <h4>Action Games</h4>
+                            <h4>The Boat House</h4>
                             <p>Nulla elementum nunc tempus.</p>
                             <img src="images/t1.jpg" class="img-responsive" alt="" />
                         </div>
                     </li>
                     <li>
                         <div class="game-grid">
-                            <h4>Racing Games</h4>
+                            <h4>Pinball Arena</h4>
                             <p>Nulla elementum nunc tempus.</p>
                             <img src="images/t3.jpg" class="img-responsive" alt="" />
                         </div>
@@ -129,7 +129,7 @@
                     </li>
                     <li>
                         <div class="game-grid">
-                            <h4>Arcade Games</h4>
+                            <h4>Board Games</h4>
                             <p>Nulla elementum nunc tempus.</p>
                             <img src="images/t2.jpg" class="img-responsive" alt="" />
                         </div>
@@ -185,11 +185,8 @@
     <div class="poster">
         <div class="container">
             <div class="poster-info">
-                <h3>Nunc cursus dui in metus efficitur, sit amet ullamcorper dolor viverra.</h3>
-                <p>Proin ornare metus eros, quis mattis lorem venenatis eget. Curabitur eget dui euismod,
-                    varius nisl eu, pharetra lacus. Sed vehicula tempor leo. Aenean dictum suscipit magna vel
-                    tempus. Aliquam nec dui dolor. Quisque scelerisque aliquet est et dignissim. Morbi magna quam,
-                    molestie sed fermentum et, elementum at dolor</p>
+                <h3>Purchase a Boat Island Token to Gain Access to the Virtual Community.</h3>
+                <p>Promo Offers on what to expect, ticket price and What they get.</p>
                 <a class="hvr-bounce-to-bottom" href="reviews.html">Read More</a>
             </div>
         </div>
@@ -199,12 +196,9 @@
         <div class="container">
             <div class="x-box_sec">
                 <div class="col-md-7 x-box-left">
-                    <h2>XBOX 360</h2>
-                    <h3>Suspendisse ornare nisl et tellus convallis, non vehicula nibh convallis.</h3>
-                    <p>Proin ornare metus eros, quis mattis lorem venenatis eget. Curabitur eget dui
-                        euismod, varius nisl eu, pharetra lacus. Sed vehicula tempor leo. Aenean dictum suscipit magna
-                        vel tempus.
-                        Aliquam nec dui dolor. Quisque scelerisque aliquet est et dignissim.</p>
+                    <h2>PURCHASE A TICKET</h2>
+                    <h3>Be the first 100 Islander to get a FREE Boat Island VR Headset</h3>
+                    <p>More about the BIVR-headset</p>
                     <a class="hvr-bounce-to-top" href="reviews.html">Read More</a>
                 </div>
                 <div class="col-md-5 x-box-right">
