Fixed the bug in header and footer components

--- a/index.html
+++ b/index.html
@@ -210,5 +210,11 @@
     </div>
 
     <bivr-footer></bivr-footer>
+    <script src="js/jquery.copyrights.js"></script>
+    <script>
+        $('bivr-footer').load('components/footer/footer.html');
+        $('bivr-header').load('components/header/header.html');
+    </script>
 </body>
+
 </html>
