--- a/about.html
+++ b/about.html
@@ -86,6 +86,11 @@
 	</div>
 	<!-- footer -->
 	<bivr-footer></bivr-footer>
+	<script src="js/jquery.copyrights.js"></script>
+	<script>
+		$('bivr-footer').load('components/footer/footer.html');
+		$('bivr-header').load('components/header/header.html');
+	</script>
 </body>
 
 </html>
