--- a/gallery.html
+++ b/gallery.html
@@ -108,6 +108,11 @@
 	<bivr-footer></bivr-footer>
 	<script src="js/lightbox-plus-jquery.min.js"></script>
 	<script src="js/bootstrap.js"></script>
+	<script src="js/jquery.copyrights.js"></script>
+	<script>
+		$('bivr-footer').load('components/footer/footer.html');
+		$('bivr-header').load('components/header/header.html');
+	</script>
 </body>
 
 </html>
