Updated footer content and page default theme

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p>Explore the boat island from a boat house. Get an access and interact with highlanders on
                             this
                             virtual island from different boats around the world.</p>
-                        <a class="btn btn-info btn-lg" href="#explore">TAKE A RIDE</a>
+                        <a class="btn btn-info btn-lg"  style="background-color:#545cac; border:none" href="#explore">TAKE A RIDE</a>
                     </div>
                 </div>
 
@@ -57,7 +57,7 @@
                         <p> Harness the play room and other mini games across the Island. YOu shall be amazed
                             with the experience. You can meet with others
                             privately or publicly on the island. </p>
-                        <a class="btn btn-info btn-lg" href="#explore">TAKE A RIDE</a>
+                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">TAKE A RIDE</a>
                     </div>
                 </div>
 
@@ -70,7 +70,7 @@
                             by purchasing a token to gain access.
 
                         </p>
-                        <a class="btn btn-info btn-lg" href="#explore">TAKE A RIDE</a>
+                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">TAKE A RIDE</a>
                     </div>
                 </div>
 
@@ -80,7 +80,7 @@
                         <p>We are building a META and Virtual space islanders can visit, connect
                             and enjoy exclusive entertainment from different boats around the world.
                         </p>
-                        <a class="btn btn-info btn-lg" href="#explore">TAKE A RIDE</a>
+                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">TAKE A RIDE</a>
                     </div>
                 </div>
 
@@ -101,7 +101,7 @@
     <div class="content">
         <div class="container">
             <div class="top-games">
-                <h3>Virtual Scenes</h3>
+                <h3>Scenery</h3>
                 <span></span>
             </div>
             <div class="top-game-grids">
@@ -175,7 +175,7 @@
             </div>
             <div class="latest-top">
                 <div class="col-md-12 trailer">
-                    <iframe src="https://youtu.be/yRh7N-CluiM" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yRh7N-CluiM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="clearfix"> </div>
             </div>
@@ -187,7 +187,7 @@
             <div class="poster-info">
                 <h3>Purchase a Boat Island Token to Gain Access to the Virtual Community.</h3>
                 <p>Promo Offers on what to expect, ticket price and What they get.</p>
-                <a class="hvr-bounce-to-bottom" href="reviews.html">Read More</a>
+                <a class="hvr-bounce-to-bottom" href="contact.html">PURCHASE TICKET</a>
             </div>
         </div>
     </div>
@@ -199,7 +199,7 @@
                     <h2>PURCHASE A TICKET</h2>
                     <h3>Be the first 100 Islander to get a FREE Boat Island VR Headset</h3>
                     <p>More about the BIVR-headset</p>
-                    <a class="hvr-bounce-to-top" href="reviews.html">Read More</a>
+                    <a class="hvr-bounce-to-top" href="contact.html">PURCHASE TICKET</a>
                 </div>
                 <div class="col-md-5 x-box-right">
                     <img src="images/xbox.jpg" class="img-responsive" alt="" />
