--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
 	<!-- Custom Theme files -->
 	<link href="css/style.css" rel='stylesheet' type='text/css' />
 	<!-- Custom Theme files -->
+	<link rel="stylesheet" href="css/lightbox.css">
 	<!--//theme-style-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -110,6 +111,9 @@
 	<script src="js/bootstrap.js"></script>
 	<script src="js/jquery.copyrights.js"></script>
 	<script>
+		$('#year').copyrights();
+		$('#developer').developer()
+
 		$('bivr-footer').load('components/footer/footer.html');
 		$('bivr-header').load('components/header/header.html');
 	</script>
