Updated header and home page content

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <p>Explore the boat island from a boat house. Get an access and interact with highlanders on
                             this
                             virtual island from different boats around the world.</p>
-                        <a class="btn btn-info btn-lg"  style="background-color:#545cac; border:none" href="#explore">TAKE A RIDE</a>
+                        <a class="btn btn-info btn-lg"  style="background-color:#545cac; border:none" href="#explore">EXPLORE</a>
                     </div>
                 </div>
 
@@ -57,7 +57,7 @@
                         <p> Harness the play room and other mini games across the Island. YOu shall be amazed
                             with the experience. You can meet with others
                             privately or publicly on the island. </p>
-                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">TAKE A RIDE</a>
+                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">EXPLORE</a>
                     </div>
                 </div>
 
@@ -70,7 +70,7 @@
                             by purchasing a token to gain access.
 
                         </p>
-                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">TAKE A RIDE</a>
+                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">EXPLORE</a>
                     </div>
                 </div>
 
@@ -80,7 +80,7 @@
                         <p>We are building a META and Virtual space islanders can visit, connect
                             and enjoy exclusive entertainment from different boats around the world.
                         </p>
-                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">TAKE A RIDE</a>
+                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">EXPLORE</a>
                     </div>
                 </div>
 
@@ -89,7 +89,7 @@
                         <h3>GET ACCESS <br>Purchase &alpha;-shell Token</h3>
                         <p>A token gives you complete access to this new world of virtual reality.
                         </p>
-                        <a class="btn btn-info btn-lg" href="#explore">TAKE A RIDE</a>
+                        <a class="btn btn-info btn-lg" href="#explore">EXPLORE</a>
                     </div>
                 </div>
 
