Updated About page

--- a/about.html
+++ b/about.html
@@ -33,54 +33,20 @@
 			<h2>About</h2>
 			<div class="about-info-grids">
 				<div class="col-md-5 abt-pic">
-					<img src="images/abt.jpg" class="img-responsive" alt="" />
+					<img src="" class="img-responsive" alt="" />
 				</div>
 				<div class="col-md-7 abt-info-pic">
-					<h3>Vestibulum congue neque quis ex fringilla, in pellentesque massa gravida.</h3>
-					<p>Mauris tempus lorem nec ex facilisis suscipit. Phasellus pretium rutrum augue, eu rutrum
-						lacus lobortis rutrum. Etiam a sem et velit sollicitudin placerat. Maecenas tincidunt
-						justo ligula, sit amet maximus dolor iaculis quis. Sed laoreet cursus posuere.
-						Pellentesque commodo odio in luctus interdum.</p>
-					<ul>
-						<li>Proin et ligula ut nulla laoreet posuere.</li>
-						<li>Sed vestibulum magna vel egestas feugiat.</li>
-						<li>Curabitur nec erat eu lorem gravida aliquet.</li>
-					</ul>
+					<h3>The Boat Island (BIVR) alpha</h3>
+					<p>BIVR is a Multiplayer Virtual Reality (VR) sandbox. It is a for boats (Content creators) and our
+						Islanders (Consumers) which is a virtual space where islanders can visit,
+						connect with each other and enjoy exclusive contents and entertainment from different boats
+						around
+						the world. This Meta-verse interactive sandbox, is accesed with a token in order to gain access.
+						Access to the boat island is exclusively FREE for our Islanders, to become and islander, simply
+						register on <a href="http://theboatisland.com">The Boat Island Portal</a>
+					</p>
 				</div>
 				<div class="clearfix"></div>
-			</div>
-			<div class="testimonals">
-				<h3>Testimonals</h3>
-				<div class="testimonal-grids">
-					<div class="col-md-4 testimonal-grid">
-						<div class="testi-info">
-							<p>""..Mauris congue, dolor at vehicula scelerisque, enim odio vehicula turpis, vitae luctus
-								dolor nisi eget est. Aliquam maximus felis eget varius mattis. Quisque tristique nibh
-								imperdiet dignissim molestie.""</p>
-							<h4>Mark Johnson</h4>
-							<a href="mailto:example@gmail.com">http://www.example.com</a>
-						</div>
-					</div>
-					<div class="col-md-4 testimonal-grid">
-						<div class="testi-info">
-							<p>""..Mauris congue, dolor at vehicula scelerisque, enim odio vehicula turpis, vitae luctus
-								dolor nisi eget est. Aliquam maximus felis eget varius mattis. Quisque tristique nibh
-								imperdiet dignissim molestie.""</p>
-							<h4>Wiiams Deo</h4>
-							<a href="mailto:example@gmail.com">http://www.example.com</a>
-						</div>
-					</div>
-					<div class="col-md-4 testimonal-grid">
-						<div class="testi-info">
-							<p>""..Mauris congue, dolor at vehicula scelerisque, enim odio vehicula turpis, vitae luctus
-								dolor nisi eget est. Aliquam maximus felis eget varius mattis. Quisque tristique nibh
-								imperdiet dignissim molestie.""</p>
-							<h4>Mark Johnson</h4>
-							<a href="mailto:example@gmail.com">http://www.example.com</a>
-						</div>
-					</div>
-					<div class="clearfix"></div>
-				</div>
 			</div>
 		</div>
 	</div>
