--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 		<div class="container">
 			<div class="contact-head">
 				<h2>Contact</h2>
-				<form action="https://sendmail.w3layouts.com/submitForm" method="post">
+				<form method="post">
 					<div class="col-md-6 contact-left">
 						<input type="text" class="text" name="w3lName" placeholder="Name" required>
 						<input type="email" class="text" name="w3lSender" placeholder="Email" required>
@@ -43,37 +43,6 @@
 					</div>
 					<div class="clearfix"></div>
 				</form>
-			</div>
-			<div class="address">
-				<h3>Our Locations</h3>
-				<div class="locations">
-					<ul>
-						<li><span></span></li>
-						<li>
-							<div class="address-info">
-								<h4>New York, Washington</h4>
-								<p>10-765 MD-Road</p>
-								<p>Washington, DC, United States,</p>
-								<p>Phone: 123 456 7890</p>
-								<p>Mail: <a href="mailto:info@example.com">info(at)example.com</a></p>
-								<h5><a href="">Visit on Google Maps >></a></h5>
-							</div>
-						</li>
-					</ul>
-					<ul>
-						<li><span></span></li>
-						<li>
-							<div class="address-info">
-								<h4>London, UK</h4>
-								<p>10-765 MD-Road</p>
-								<p>Lorem ipsum, domon sit, UK,</p>
-								<p>Phone: 123 456 7890</p>
-								<p>Mail: <a href="mailto:info@example.com">info(at)example.com</a></p>
-								<h5><a href="">Visit on Google Maps >></a></h5>
-							</div>
-						</li>
-					</ul>
-				</div>
 			</div>
 		</div>
 	</div>
