--- a/about.html
+++ b/about.html
@@ -30,20 +30,21 @@
 	<!-- About -->
 	<div class="about">
 		<div class="container">
-			<h2>About</h2>
+			<h2>The Boat Island Alpha (BIVR-&alpha;)</h2>
 			<div class="about-info-grids">
 				<div class="col-md-5 abt-pic">
-					<img src="" class="img-responsive" alt="" />
+					<img src="images/abt.png" class="img-responsive" alt="boat island alpha" />
 				</div>
 				<div class="col-md-7 abt-info-pic">
-					<h3>The Boat Island (BIVR) alpha</h3>
+					<h3>An Interactive VR Sandbox</h3>
 					<p>BIVR is a Multiplayer Virtual Reality (VR) sandbox. It is a for boats (Content creators) and our
 						Islanders (Consumers) which is a virtual space where islanders can visit,
 						connect with each other and enjoy exclusive contents and entertainment from different boats
-						around
-						the world. This Meta-verse interactive sandbox, is accesed with a token in order to gain access.
+						around the world. 
+						This Meta-verse interactive sandbox, is accesed with a token in order to gain access.
 						Access to the boat island is exclusively FREE for our Islanders, to become and islander, simply
-						register on <a href="http://theboatisland.com">The Boat Island Portal</a>
+						register on <a href="http://theboatisland.com">The Boat Island Portal</a>.
+						BIVR-&alpha; is available of Android and VR console
 					</p>
 				</div>
 				<div class="clearfix"></div>
