Added some new screenshots

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-   <bivr-header></bivr-header>
+    <bivr-header></bivr-header>
     <!-- banner -->
     <!-- Slider-starts-Here -->
     <script src="js/responsiveslides.min.js"></script>
@@ -46,7 +46,8 @@
                         <p>Explore the boat island from a boat house. Get an access and interact with highlanders on
                             this
                             virtual island from different boats around the world.</p>
-                        <a class="btn btn-info btn-lg"  style="background-color:#545cac; border:none" href="#explore">EXPLORE</a>
+                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none"
+                            href="#explore">EXPLORE</a>
                     </div>
                 </div>
 
@@ -57,7 +58,8 @@
                         <p> Harness the play room and other mini games across the Island. YOu shall be amazed
                             with the experience. You can meet with others
                             privately or publicly on the island. </p>
-                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">EXPLORE</a>
+                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none"
+                            href="#explore">EXPLORE</a>
                     </div>
                 </div>
 
@@ -70,7 +72,8 @@
                             by purchasing a token to gain access.
 
                         </p>
-                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">EXPLORE</a>
+                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none"
+                            href="#explore">EXPLORE</a>
                     </div>
                 </div>
 
@@ -80,7 +83,8 @@
                         <p>We are building a META and Virtual space islanders can visit, connect
                             and enjoy exclusive entertainment from different boats around the world.
                         </p>
-                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none" href="#explore">EXPLORE</a>
+                        <a class="btn btn-info btn-lg" style="background-color:#545cac; border:none"
+                            href="#explore">EXPLORE</a>
                     </div>
                 </div>
 
@@ -175,7 +179,10 @@
             </div>
             <div class="latest-top">
                 <div class="col-md-12 trailer">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yRh7N-CluiM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yRh7N-CluiM"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
                 </div>
                 <div class="clearfix"> </div>
             </div>
