Updated cover photos

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 			<h2>The Boat Island Alpha (BIVR-&alpha;)</h2>
 			<div class="about-info-grids">
 				<div class="col-md-5 abt-pic">
-					<img src="images/abt.png" class="img-responsive" alt="boat island alpha" />
+					<img src="images/b1.png" class="img-responsive" alt="boat island alpha" />
 				</div>
 				<div class="col-md-7 abt-info-pic">
 					<h3>An Interactive VR Sandbox</h3>
