--- a/index.html
+++ b/index.html
@@ -112,30 +112,58 @@
                 <ul id="flexiselDemo1">
                     <li>
                         <div class="game-grid">
-                            <h4>The Boat House</h4>
-                            <p>Nulla elementum nunc tempus.</p>
-                            <img src="images/t1.jpg" class="img-responsive" alt="" />
+                            <h4>Cruise Boat</h4>
+                            <p></p>
+                            <img src="images/t1.png" class="img-responsive" alt="" />
                         </div>
                     </li>
                     <li>
                         <div class="game-grid">
-                            <h4>Pinball Arena</h4>
-                            <p>Nulla elementum nunc tempus.</p>
-                            <img src="images/t3.jpg" class="img-responsive" alt="" />
+                            <h4>BoatIsland</h4>
+                            <p></p>
+                            <img src="images/t2.png" class="img-responsive" alt="" />
                         </div>
                     </li>
                     <li>
                         <div class="game-grid">
-                            <h4>3D Games</h4>
-                            <p>Nulla elementum nunc tempus.</p>
-                            <img src="images/t4.jpg" class="img-responsive" alt="" />
+                            <h4>Club House</h4>
+                            <p></p>
+                            <img src="images/t3.png" class="img-responsive" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="game-grid">
+                            <h4>Concert Arena</h4>
+                            <p></p>
+                            <img src="images/t4.png" class="img-responsive" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="game-grid">
+                            <h4>Cruise Boat</h4>
+                            <p></p>
+                            <img src="images/t5.png" class="img-responsive" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="game-grid">
+                            <h4>Game Lobby</h4>
+                            <p></p>
+                            <img src="images/t6.png" class="img-responsive" alt="" />
                         </div>
                     </li>
                     <li>
                         <div class="game-grid">
                             <h4>Board Games</h4>
-                            <p>Nulla elementum nunc tempus.</p>
-                            <img src="images/t2.jpg" class="img-responsive" alt="" />
+                            <p></p>
+                            <img src="images/t7.png" class="img-responsive" alt="" />
+                        </div>
+                    </li>
+                    <li>
+                        <div class="game-grid">
+                            <h4>Paintball Arena</h4>
+                            <p></p>
+                            <img src="images/t8.png" class="img-responsive" alt="" />
                         </div>
                     </li>
                 </ul>
